app/assets/stylesheets/_base.scss
body{
  background: white;
  border: 2px solid #f5f8fa;
  font-family:  "Helvetica Neue",Roboto,"Segoe UI",Calibri,sans-serif;
  font-size: 16px;
  line-height: 1.8;
}

h1,h2,h3,h4,h5,h6{
 line-height: 1;
 font-weight:500;
}

h1 { font-size:  2rem; margin-bottom:48px; font-weight:700;}
h2 { font-size:  1.5rem; margin-bottom:32px; }
h3 { font-size:  1.25rem; margin-bottom:32px;}
h4 { font-size:  1rem; margin-bottom:16px;}
h5 { font-size:  .875rem; margin-bottom:16px; }
h6 { font-size:  .675rem; margin-bottom:16px;}

p, ul, ol {
  margin-bottom:32px;
}

li{
  margin-bottom:16px;
  ul, ol{
    margin:16px 0;
    padding-left:2em;
  }
}

.title{
  text-align:center;
}

.container{
  padding: 80px 20px;
  width: 300px;
  margin: 0 auto;

  @media only screen and (min-width: 640px){
    padding: 80px 40px;
    width: 620px;
  }
}

